Removed configuration specifics to be able to test under default configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 script:
   - dotnet restore
   - dotnet build
-  - dotnet test -c Release
+  - dotnet test
 deploy:
   provider: heroku
   app: saymyname-service
